<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_cards"
        android:title="@string/menu_search_cards"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:orderInCategory="10"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_shuffle_cards"
        android:title="@string/menu_shuffle_cards"
        android:icon="@drawable/ic_shuffle"
        android:checkable="true"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_content"
        android:title="@string/menu_add_content"
        android:icon="@drawable/ic_add"
        android:orderInCategory="30"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_add_card"
                android:title="@string/menu_add_card"
                android:icon="@drawable/ic_edit"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_add_image_card"
                android:title="@string/menu_add_image_card"
                android:icon="@drawable/ic_gallery"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_add_handwriting"
                android:title="@string/menu_add_handwriting"
                android:icon="@drawable/ic_handwriting"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_add_flow"
                android:title="@string/menu_add_flow"
                android:icon="@drawable/ic_add"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_export_flow"
        android:title="@string/menu_export_flow"
        android:icon="@drawable/ic_save"
        android:orderInCategory="40"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_pick_video_folder"
        android:title="@string/menu_pick_video_folder"
        android:icon="@drawable/ic_gallery"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh_video_folder"
        android:title="@string/menu_refresh_video_folder"
        android:icon="@drawable/ic_shuffle"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="always"/>

</menu>
